# PVG

./: .gitignore  CMakeLists.txt  README.md
alglib/include/: alglibmisc.h  dataanalysis.h  interpolation.h  linalg.h  optimization.h  solvers.h
alglib/src/: alglibinternal.cpp  alglibmisc.cpp  ap.cpp  dataanalysis.cpp  interpolation.cpp  linalg.cpp  optimization.cpp  solvers.cpp
fade2d/include/: ConstraintGraph2.h  ConstraintSegment2.h  Fade_2D.h  Point2.h  freeFunctions.h
frontend/include/: PVG.h  ParseColor.hpp  RegionFZ.h  SamplSimpl.hpp  Strokes.h  pathstroke_auxiliary.h  psimpl.h
frontend/src/: PVG.cpp  RegionFZ.cpp  pathstroke_auxiliary.cpp
fz/include/: Geometry.hpp  PVG.h  PVGBuffer.h  ParseColor.hpp  RegionFZ.h  SamplSimpl.hpp  Strokes.h  pathstroke_auxiliary.h  psimpl.h
fz/src/: PVG.cpp  PVGBuffer.cpp  RegionFZ.cpp  Strokes.cpp
main/include/: auxiliary.h  debug.h  global.h
main/src/: main.cpp
pvg_solver/include/: adaptive_evaluation.h  auxiliary.h  cuda_adaptive_evaluation.h  logger.h  poisson_solver.h  quadtree.h  region.h  structure.h
pvg_solver/src/: adaptive_solver.cpp  auxiliary.cpp  cuda_adaptive_evaluation.cu  logger.cpp  quadtree.cpp  region.cpp
solver/include/: adaptive_evaluation.h  adaptive_solver.h  auxiliary.h  point_vector.h  poisson_solver.h  quadtree.h  region.h  structure.h  tree.hh
solver/src/: adaptive_evaluation.cpp  adaptive_solver.cpp  poisson_solver.cpp  quadtree.cpp  region.cpp
tinyxml/include/: tinyxml2.h
tinyxml/src/: tinyxml2.cpp
